# gomokuAI

./: .gitignore  AIclass.py  Makefile  Readme.md  board_analyze.py  clear_repo.ps1  generate_binary.ps1  gomoku.py  test.py
.github/workflows/: gomoku_action.yaml
commands/: extra.py  move.py  start.py
inC/: CMakeLists.txt  Makefile
inC/include/: gomoku.hpp
inC/src/: boardAnalyze.cpp  gomoku.cpp  main.cpp  minmax.cpp  start.cpp
inC/src/commands/: extra.cpp  move.cpp  restart.cpp  start.cpp
src/: AIclass.py  board_analyze.py  gomoku.py  main.py  minmax.py  montecarlo.py  protocol.py
src/commands/: extra.py  move.py  start.py
